# horsefm-lib

./: pyproject.toml
notebooks/: check_transcription_errors.ipynb  export_data.ipynb
src/horsefm/: clipper.py  mfa.py  phonemes.py
src/horsefm/datasets/: clipper_datasets.py  clipper_mlp_values.py
