[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "horsefm"
version = "0.0.1"
authors = [
  { name="Synthbot Anon", email="synthbot@celestia.ai" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "librosa",
    "praatio",
    "praat-parselmouth",
    "pandas",
    "pysoundfile",
    "tqdm",
    "joblib",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

